updated advice api application with http status codes,swagger implementation with ui and how to run with test cases.